--- a/src/TidyWindow.App/Views/InstallHubQueueView.xaml
+++ b/src/TidyWindow.App/Views/InstallHubQueueView.xaml
@@ -6,7 +6,12 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:infra="clr-namespace:TidyWindow.App.Infrastructure"
              mc:Ignorable="d"
-             Background="Transparent">
+             Background="Transparent"
+             UseLayoutRounding="True"
+             SnapsToDevicePixels="True"
+             TextOptions.TextFormattingMode="Display"
+             TextOptions.TextRenderingMode="Auto"
+             TextOptions.TextHintingMode="Fixed">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
